force-app/main/default/objects/Inbox_Synch_Tracker__c/Inbox_Synch_Tracker__c.object-meta.xml
<CustomObject>
    <description>Tracks last synch date by User</description>
    <label>Inbox Synch Tracker</label>
    <nameField>
        <displayFormat>SYNC-{000000}</displayFormat>
        <label>SynchId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inbox Synch Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>