force-app/main/default/objects/Inbox_Synch_Tracker__c/fields/Client_Synch_Date__c.field-meta.xml
<CustomField>
    <fullName>Client_Synch_Date__c</fullName>
    <description>Date Time @ client when last synch completed</description>
    <label>Client Synch Date</label>
    <length>100</length>
    <type>Text</type>
</CustomField>