force-app/main/default/objects/Inbox_Synch_Tracker__c/fields/Last_Synch_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Synch_Date__c</fullName>
    <defaultValue>Now()</defaultValue>
    <description>Last Synch Date</description>
    <inlineHelpText>LastSynchDate</inlineHelpText>
    <label>Last Synch Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>