force-app/main/default/objects/Inbox_Synch_Tracker__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User</description>
    <inlineHelpText>User</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Inbox_Synch_Tracker</relationshipName>
    <type>Lookup</type>
</CustomField>